force-app/main/default/objects/Valitive_Setting__mdt/Valitive_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Valitive Setting</label>
    <pluralLabel>Valitive Settings</pluralLabel>
</CustomObject>