force-app/main/default/objects/Valitive_Setting__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>