force-app/main/default/objects/Valitive_Setting__mdt/fields/Organisation_Monitoring_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Monitoring_Set_Id__c</fullName>
    <label>Organisation Monitoring Set Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>