force-app/main/default/objects/Valitive_Setting__mdt/fields/Private_Monitoring_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Private_Monitoring_Set_Id__c</fullName>
    <label>Private Monitoring Set Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>